Fix salary results width on mobile devices

--- a/src/app/SalaryResults/SalaryResults.scss
+++ b/src/app/SalaryResults/SalaryResults.scss
@@ -3,6 +3,10 @@
     height: 100%;
     background-color: #FBF4DA;
     padding: 20px;
+
+    @media(max-width: 500px) {
+        width: auto;
+    }
 }
 
 .salaryResults > span {
